# backend/internal/handler/event_handler.go
@@ -2,6 +2,8 @@ package handler
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/robert-wl/backend/internal/domain/model"
+	"github.com/robert-wl/backend/internal/dto"
 	"github.com/robert-wl/backend/internal/service"
 	"github.com/robert-wl/backend/pkg/utils"
 	"net/http"
@@ -15,6 +17,36 @@ func NewEventHandler(es service.EventService) *EventHandler {
 	return &EventHandler{
 		eventService: es,
 	}
+}
+
+// CreateEvent @Summary Create an event
+// @Description Create an event
+// @Tags event
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param event body dto.CreateEventRequest true "Event"
+// @Success 201
+// @Failure 400 {object} utils.ErrorResponse
+// @Router /events [post]
+func (h *EventHandler) CreateEvent(ctx *gin.Context) {
+	user := ctx.MustGet("user").(*model.User)
+
+	var req dto.CreateEventRequest
+
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		utils.SendError(ctx, err)
+		return
+	}
+
+	err := h.eventService.CreateEvent(user, &req)
+
+	if err != nil {
+		utils.SendError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, nil)
 }
 
 // FindAllType @Summary Find all event types
